--- a/landingpage.html
+++ b/landingpage.html
@@ -37,12 +37,24 @@ alt="screenshot"
 title="screenshot"/>
 </p>
 
+<p>
+<img src="images/ex02.jpg"
+alt="screenshot"
+title="screenshot"/>
+</p>
+
 <h2>
 Test Results
 </h2>
 
 <p>
 This is where the test results will go.
+</p>
+
+<p>
+<img src="images/results.jpg"
+alt="screenshot"
+title="screenshot"/>
 </p>
 
 </body>
