--- a/landingpage.html
+++ b/landingpage.html
@@ -43,6 +43,18 @@ alt="screenshot"
 title="screenshot"/>
 </p>
 
+<p>
+<img src="images/1.jpg"
+alt="screenshot"
+title="screenshot"/>
+</p>
+
+<p>
+<img src="images/2.jpg"
+alt="screenshot"
+title="screenshot"/>
+</p>
+
 <h2>
 Test Results
 </h2>
@@ -53,6 +65,18 @@ This is where the test results will go.
 
 <p>
 <img src="images/results.jpg"
+alt="screenshot"
+title="screenshot"/>
+</p>
+
+<p>
+<img src="images/f1.jpg"
+alt="screenshot"
+title="screenshot"/>
+</p>
+
+<p>
+<img src="images/f2.jpg"
 alt="screenshot"
 title="screenshot"/>
 </p>
